syntax = "proto3";

import public "protip/extensions.proto";

package protip.messages;

message RepeatedDouble {
  repeated double values = 1;
}

message RepeatedFloat {
  repeated float values = 1;
}

message RepeatedInt64 {
  repeated int64 values = 1;
}

message RepeatedUInt64 {
  repeated uint64 values = 1;
}

message RepeatedInt32 {
  repeated int32 values = 1;
}

message RepeatedUInt32 {
  repeated uint32 values = 1;
}

message RepeatedBool {
  repeated bool values = 1;
}

message RepeatedString {
  repeated string values = 1;
}

message RepeatedBytes {
  repeated bytes values = 1;
}

// Should generally be used with the "protip_enum" option
// for serialization to/from Ruby.
message RepeatedEnum {
  repeated int32 values = 1;
}